--- a/index.html
+++ b/index.html
@@ -3,22 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="with=device-width,user=scalable=no">
-    <title>Curriculum Vitae</title>
+    <title>Tu Concierto</title>
+    <link rel="stylesheet" href="css/estilos.css">
   </head>
   <body>
 
     <header>
-              <img src="img/Logo.svg" alt="logo" title="logo personal" width="150px">
+            <h1><img style="background-color:white; width:15%" src="img/concert_logo.png" alt="logo" title="concertlogo">Tu concierto</h1></br>
 
-              <h1>Curriculum Vitae</h1>
-                 <h2><u>Nombre:</u> Mariano E. Gonzalez Racig</h2>
-                 <h2><u>Lugar de nacimiento:</u> Buenos Aires, Argentina</h2>
-                 <h2><u>Fecha de nacimiento:</u> 07/05/1984</h2>
 
-              <p title="Vinculos">
-                <p><a href="html/educacion.html" >Educacion</a></p>
-                <p><a href="html/experiencia.html" >Experiencia</a></p>
-              </p>
+                 <h2>Bienvenido a tu blog de conciertos....</h2></br>
+
 
     </header>
 
@@ -26,30 +21,11 @@
 
     <section>
 
-              <p title="Datos personales">
-                    <h2>Informacion Personal</h2>
-              </p>
-
               <p title="Foto">
-                    <img src="img/Fotodeperfil.jpg" alt="Mariano Gonzalez Racig" title="Mariano Gonzalez Racig" width="300px">
+                    <img src="img/concert.jpg" alt="Concierto" title="Concierto" style="width:90%">
               </p>
 
-              <p title="Perfil">
-                    Ingeniero Electrónico con mas de 10 años de experiencia en <strong>automatización industrial</strong>, diseño de robótica, machine learning, y diseño mecánico.<br />
-                    Se desempeñó en diversas industrias tales como  <i>steelmaking, milk processing, food technologies, domotics, quantitive analysis</i>.<br />
-                    Actualmente se desempeña en la carrera de <i>programacion web, full stack, y diseño de contenidos digitales.</i>
-              </p>
 
-              <p title="Lista">
-                    <b><u>Idiomas:</u></b>
-                    <ul>
-                    <li>Inglés</li>
-                    <li>Alemán</li>
-                    <li>Español (Nativo)</li>
-                    <li>Italiano</li>
-                    </ul>
-
-              </p>
     </section>
 
 
