--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="css/estilos.css">
   </head>
   <body>
+    <div>
+
 
     <header>
             <h1><img style="background-color:white; width:15%" src="img/concert_logo.png" alt="logo" title="concertlogo">Tu concierto</h1></br>
 
 
-                 <h2>Bienvenido a tu blog de conciertos....</h2></br>
+                 <h2 style="color:green">Bienvenido a tu blog de conciertos....</h2></br>
 
 
     </header>
@@ -40,6 +42,7 @@
 
     </footer>
 
+    </div>
 
   </body>
 </html>
